pod-definition-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: front-end
spec:
  containers:
  - name: nginx-container
    image: nginx
    resources:
      requests/limits:
        memory: "1 Gi"
        cpu: 1
  tolerations:
  - key: "app"
    operator: "Equal"
    value: "Blue"
    effect: "NoSchedule"
  nodeSelector:
    size: Large
