pod-definition-secret.yaml
apiVersion: v1
kind: Pod
metadata:
 name: ubuntu-sleeper-pod
spec:
 containers:
  - name: ubuntu-sleeper
    image: ubuntu-sleeper
    command: ["sleep2.0"]    =  DOCKERFILE ENTRYPOINT
    args: ["10"]   = DOCKERFILE CMD
