pod-definition-securitycontext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: front-end
spec:
  securityContext: # pod level security or we can use
   runAsUser: 1000
  containers:
  - name: nginx-container
    image: nginx
    command: ["sleep","3600"]
    securityContext:
     runAsUser: 1000  # container level security
     capabilites:
      add: ["MAC_ADMIN"]
