service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: NodePort
  selector:
    app: myapp
    type: front-end
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30008
