ingressdomain-definition-resources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
 name: ingress-wear-watch
spec:
 rules:
  - host: watch.my-online-store.com
    http:
     paths: /watch
     - backend:
        serviceName: watch-service
        servicePort: 80
  - host: wear.my-online-store.com
    http:
     paths: /wear
     - backend:
        serviceName: wear-service
        servicePort: 80
