networkpolicy-definition2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
       matchLabels:
        name: mysql
    ports:
    - protocol: TCP
      port: 3306
  - to:
    - podSelector:
       matchLabels:
        name: payroll
    ports:
    - protocol: TCP
      port: 8080
